# rs-noise-generator

./: .gitignore  Cargo.toml  LICENSE  readme.adoc
src/: lib.rs  utils.rs  wav.rs
src/noise/: ifft_olap.rs  ifft_phc.rs  mod.rs
